--- a/traffic sign.ipynb
+++ b/traffic sign.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -525,10 +525,10 @@
     {
      "data": {
       "text/plain": [
-       "(array([162, 161, 142], dtype=uint8), array([155.]))"
+       "(array([69, 64, 66], dtype=uint8), array([66.33333333]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,15 +541,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "465\n",
-      "155.0\n"
+      "199\n",
+      "66.33333333333333\n"
      ]
     }
    ],
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1559,11 +1559,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import Input, Conv2D, Dense, Flatten, Dropout, AveragePooling2D\n",
+    "from tensorflow.keras.layers import Input, Conv2D, Dense, Flatten, Dropout, AveragePooling2D, BatchNormalization\n",
     "from tensorflow.keras.models import Model"
    ]
   },
@@ -2009,6 +2009,331 @@
     "    axi.imshow(X_test[idx])\n",
     "    axi.set_title(f\"Prediction = {sign_labels[y_pred[idx]]}\\n True = {sign_labels[y_test[idx]]}\")\n",
     "    axi.set(xticks=[], yticks=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try `MaxPooling` instead of `AveragePooling`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import Input, Conv2D, Dense, Flatten, Dropout, MaxPooling2D, BatchNormalization\n",
+    "from tensorflow.keras.models import Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = Input(X_train[0].shape)\n",
+    "\n",
+    "x = Conv2D(8, (3, 3), activation = \"relu\")(i)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = MaxPooling2D((2, 2))(x)\n",
+    "\n",
+    "x = Conv2D(16, (3, 3), activation = \"relu\")(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = MaxPooling2D((2, 2))(x)\n",
+    "\n",
+    "x = Flatten()(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(120, activation = \"relu\")(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(86, activation = \"relu\")(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(43, activation = \"softmax\")(x)\n",
+    "\n",
+    "model = Model(i, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=\"adam\",\n",
+    "              loss=\"sparse_categorical_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 34799 samples, validate on 4410 samples\n",
+      "Epoch 1/25\n",
+      "34799/34799 [==============================] - 211s 6ms/sample - loss: 2.8241 - accuracy: 0.2656 - val_loss: 3.3973 - val_accuracy: 0.2268\n",
+      "Epoch 2/25\n",
+      "34799/34799 [==============================] - 54s 2ms/sample - loss: 1.3972 - accuracy: 0.5782 - val_loss: 2.8777 - val_accuracy: 0.2823\n",
+      "Epoch 3/25\n",
+      "34799/34799 [==============================] - 49s 1ms/sample - loss: 0.8188 - accuracy: 0.7383 - val_loss: 2.2853 - val_accuracy: 0.3794\n",
+      "Epoch 4/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.5679 - accuracy: 0.8211 - val_loss: 1.5574 - val_accuracy: 0.5553\n",
+      "Epoch 5/25\n",
+      "34799/34799 [==============================] - 38s 1ms/sample - loss: 0.4303 - accuracy: 0.8653 - val_loss: 1.0584 - val_accuracy: 0.6810\n",
+      "Epoch 6/25\n",
+      "34799/34799 [==============================] - 40s 1ms/sample - loss: 0.3463 - accuracy: 0.8898 - val_loss: 0.6333 - val_accuracy: 0.7959\n",
+      "Epoch 7/25\n",
+      "34799/34799 [==============================] - 39s 1ms/sample - loss: 0.2923 - accuracy: 0.9094 - val_loss: 0.5072 - val_accuracy: 0.8406\n",
+      "Epoch 8/25\n",
+      "34799/34799 [==============================] - 42s 1ms/sample - loss: 0.2449 - accuracy: 0.9236 - val_loss: 0.4107 - val_accuracy: 0.8760\n",
+      "Epoch 9/25\n",
+      "34799/34799 [==============================] - 40s 1ms/sample - loss: 0.2191 - accuracy: 0.9314 - val_loss: 0.3705 - val_accuracy: 0.8880\n",
+      "Epoch 10/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.1918 - accuracy: 0.9409 - val_loss: 0.3312 - val_accuracy: 0.9005\n",
+      "Epoch 11/25\n",
+      "34799/34799 [==============================] - 44s 1ms/sample - loss: 0.1708 - accuracy: 0.9462 - val_loss: 0.3352 - val_accuracy: 0.9095\n",
+      "Epoch 12/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.1581 - accuracy: 0.9503 - val_loss: 0.3097 - val_accuracy: 0.9127\n",
+      "Epoch 13/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.1396 - accuracy: 0.9558 - val_loss: 0.3471 - val_accuracy: 0.9066\n",
+      "Epoch 14/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.1313 - accuracy: 0.9584 - val_loss: 0.2926 - val_accuracy: 0.9177\n",
+      "Epoch 15/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.1271 - accuracy: 0.9599 - val_loss: 0.2964 - val_accuracy: 0.9195\n",
+      "Epoch 16/25\n",
+      "34799/34799 [==============================] - 44s 1ms/sample - loss: 0.1168 - accuracy: 0.9638 - val_loss: 0.3017 - val_accuracy: 0.9156\n",
+      "Epoch 17/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.1111 - accuracy: 0.9634 - val_loss: 0.2836 - val_accuracy: 0.9231\n",
+      "Epoch 18/25\n",
+      "34799/34799 [==============================] - 44s 1ms/sample - loss: 0.1004 - accuracy: 0.9677 - val_loss: 0.3086 - val_accuracy: 0.9170\n",
+      "Epoch 19/25\n",
+      "34799/34799 [==============================] - 44s 1ms/sample - loss: 0.0949 - accuracy: 0.9687 - val_loss: 0.2911 - val_accuracy: 0.9238\n",
+      "Epoch 20/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.0949 - accuracy: 0.9703 - val_loss: 0.3002 - val_accuracy: 0.9222\n",
+      "Epoch 21/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.0850 - accuracy: 0.9729 - val_loss: 0.2487 - val_accuracy: 0.9331\n",
+      "Epoch 22/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.0895 - accuracy: 0.9718 - val_loss: 0.2808 - val_accuracy: 0.9265\n",
+      "Epoch 23/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.0820 - accuracy: 0.9734 - val_loss: 0.2393 - val_accuracy: 0.9365\n",
+      "Epoch 24/25\n",
+      "34799/34799 [==============================] - 43s 1ms/sample - loss: 0.0779 - accuracy: 0.9749 - val_loss: 0.2773 - val_accuracy: 0.9268\n",
+      "Epoch 25/25\n",
+      "34799/34799 [==============================] - 44s 1ms/sample - loss: 0.0742 - accuracy: 0.9762 - val_loss: 0.2623 - val_accuracy: 0.9295\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = model.fit(X_train,\n",
+    "              y_train,\n",
+    "              batch_size = 500,\n",
+    "              epochs = 25,\n",
+    "              validation_data = (X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12630/12630 [==============================] - 11s 849us/sample - loss: 0.2559 - accuracy: 0.9391\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.2559220786667292, 0.9391132]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try changing the kernel size `5*5` instead of `3*3`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = Input(X_train[0].shape)\n",
+    "\n",
+    "x = Conv2D(8, (5, 5), activation = \"relu\")(i)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = AveragePooling2D((2, 2))(x)\n",
+    "\n",
+    "x = Conv2D(16, (5, 5), activation = \"relu\")(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = AveragePooling2D((2, 2))(x)\n",
+    "\n",
+    "x = Flatten()(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(120, activation = \"relu\")(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(86, activation = \"relu\")(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(43, activation = \"softmax\")(x)\n",
+    "\n",
+    "model = Model(i, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=\"adam\",\n",
+    "              loss=\"sparse_categorical_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 34799 samples, validate on 4410 samples\n",
+      "Epoch 1/30\n",
+      "34799/34799 [==============================] - 50s 1ms/sample - loss: 2.3671 - accuracy: 0.3749 - val_loss: 3.3153 - val_accuracy: 0.2522\n",
+      "Epoch 2/30\n",
+      "34799/34799 [==============================] - 48s 1ms/sample - loss: 0.9503 - accuracy: 0.7088 - val_loss: 3.0390 - val_accuracy: 0.1825\n",
+      "Epoch 3/30\n",
+      "34799/34799 [==============================] - 49s 1ms/sample - loss: 0.5423 - accuracy: 0.8313 - val_loss: 3.0727 - val_accuracy: 0.1506\n",
+      "Epoch 4/30\n",
+      "34799/34799 [==============================] - 49s 1ms/sample - loss: 0.3639 - accuracy: 0.8883 - val_loss: 2.7217 - val_accuracy: 0.2476\n",
+      "Epoch 5/30\n",
+      "34799/34799 [==============================] - 45s 1ms/sample - loss: 0.2778 - accuracy: 0.9137 - val_loss: 1.6104 - val_accuracy: 0.4753\n",
+      "Epoch 6/30\n",
+      "34799/34799 [==============================] - 48s 1ms/sample - loss: 0.2285 - accuracy: 0.9296 - val_loss: 0.8515 - val_accuracy: 0.7320\n",
+      "Epoch 7/30\n",
+      "34799/34799 [==============================] - 48s 1ms/sample - loss: 0.1898 - accuracy: 0.9420 - val_loss: 0.4223 - val_accuracy: 0.8646\n",
+      "Epoch 8/30\n",
+      "34799/34799 [==============================] - 45s 1ms/sample - loss: 0.1622 - accuracy: 0.9507 - val_loss: 0.2239 - val_accuracy: 0.9288\n",
+      "Epoch 9/30\n",
+      "34799/34799 [==============================] - 45s 1ms/sample - loss: 0.1342 - accuracy: 0.9604 - val_loss: 0.1969 - val_accuracy: 0.9383\n",
+      "Epoch 10/30\n",
+      "34799/34799 [==============================] - 48s 1ms/sample - loss: 0.1249 - accuracy: 0.9619 - val_loss: 0.1550 - val_accuracy: 0.9528\n",
+      "Epoch 11/30\n",
+      "34799/34799 [==============================] - 50s 1ms/sample - loss: 0.1083 - accuracy: 0.9673 - val_loss: 0.1491 - val_accuracy: 0.9560\n",
+      "Epoch 12/30\n",
+      "34799/34799 [==============================] - 44s 1ms/sample - loss: 0.1031 - accuracy: 0.9680 - val_loss: 0.1390 - val_accuracy: 0.9583\n",
+      "Epoch 13/30\n",
+      "34799/34799 [==============================] - 46s 1ms/sample - loss: 0.1016 - accuracy: 0.9705 - val_loss: 0.1530 - val_accuracy: 0.9592\n",
+      "Epoch 14/30\n",
+      "34799/34799 [==============================] - 39s 1ms/sample - loss: 0.0873 - accuracy: 0.9734 - val_loss: 0.1580 - val_accuracy: 0.9535\n",
+      "Epoch 15/30\n",
+      "34799/34799 [==============================] - 38s 1ms/sample - loss: 0.0808 - accuracy: 0.9753 - val_loss: 0.1229 - val_accuracy: 0.9685\n",
+      "Epoch 16/30\n",
+      "34799/34799 [==============================] - 38s 1ms/sample - loss: 0.0752 - accuracy: 0.9769 - val_loss: 0.1352 - val_accuracy: 0.9646\n",
+      "Epoch 17/30\n",
+      "34799/34799 [==============================] - 38s 1ms/sample - loss: 0.0706 - accuracy: 0.9775 - val_loss: 0.1288 - val_accuracy: 0.9649\n",
+      "Epoch 18/30\n",
+      "34799/34799 [==============================] - 38s 1ms/sample - loss: 0.0650 - accuracy: 0.9803 - val_loss: 0.1226 - val_accuracy: 0.9687\n",
+      "Epoch 19/30\n",
+      "34799/34799 [==============================] - 42s 1ms/sample - loss: 0.0617 - accuracy: 0.9803 - val_loss: 0.1314 - val_accuracy: 0.9676\n",
+      "Epoch 20/30\n",
+      "34799/34799 [==============================] - 54s 2ms/sample - loss: 0.0611 - accuracy: 0.9812 - val_loss: 0.1177 - val_accuracy: 0.9696\n",
+      "Epoch 21/30\n",
+      "34799/34799 [==============================] - 48s 1ms/sample - loss: 0.0541 - accuracy: 0.9836 - val_loss: 0.1156 - val_accuracy: 0.9696\n",
+      "Epoch 22/30\n",
+      "34799/34799 [==============================] - 47s 1ms/sample - loss: 0.0561 - accuracy: 0.9825 - val_loss: 0.1409 - val_accuracy: 0.9685\n",
+      "Epoch 23/30\n",
+      "34799/34799 [==============================] - 52s 1ms/sample - loss: 0.0512 - accuracy: 0.9840 - val_loss: 0.1345 - val_accuracy: 0.9624\n",
+      "Epoch 24/30\n",
+      "34799/34799 [==============================] - 50s 1ms/sample - loss: 0.0476 - accuracy: 0.9852 - val_loss: 0.1231 - val_accuracy: 0.9683\n",
+      "Epoch 25/30\n",
+      "34799/34799 [==============================] - 49s 1ms/sample - loss: 0.0490 - accuracy: 0.9840 - val_loss: 0.1373 - val_accuracy: 0.9617\n",
+      "Epoch 26/30\n",
+      "34799/34799 [==============================] - 51s 1ms/sample - loss: 0.0476 - accuracy: 0.9851 - val_loss: 0.1115 - val_accuracy: 0.9710\n",
+      "Epoch 27/30\n",
+      "34799/34799 [==============================] - 51s 1ms/sample - loss: 0.0395 - accuracy: 0.9876 - val_loss: 0.1023 - val_accuracy: 0.9753\n",
+      "Epoch 28/30\n",
+      "34799/34799 [==============================] - 52s 1ms/sample - loss: 0.0402 - accuracy: 0.9868 - val_loss: 0.1719 - val_accuracy: 0.9649\n",
+      "Epoch 29/30\n",
+      "34799/34799 [==============================] - 41s 1ms/sample - loss: 0.0373 - accuracy: 0.9882 - val_loss: 0.1652 - val_accuracy: 0.9671\n",
+      "Epoch 30/30\n",
+      "34799/34799 [==============================] - 41s 1ms/sample - loss: 0.0411 - accuracy: 0.9870 - val_loss: 0.1152 - val_accuracy: 0.9692\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = model.fit(X_train,\n",
+    "              y_train,\n",
+    "              batch_size = 500,\n",
+    "              epochs = 30,\n",
+    "              validation_data = (X_valid, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12630/12630 [==============================] - 11s 853us/sample - loss: 0.2095 - accuracy: 0.9485\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.20948324456268003, 0.94845605]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### model with kernel size = $3*3$ vs kernel size = $5*5$\n",
+    "test accuracy:\n",
+    "- kernel size(3*3) = 94.18%\n",
+    "- kernel size(5*5) = 94.85%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.models.save_model(model, \"traffic_sign-4.hdf5\")"
    ]
   },
   {
